# verilog_studio

./: CMakeLists.txt  IService.hpp  README.md  b.json  g.json  j.json  led_demo.v  main.cpp  temp.json  test.cpp  test.v  z.json
Common/Foundation/: B_Object.hpp
Common/Supporting/: ThreadPool.hpp  Tree.hpp  cmdline.hpp
Module/: Module.cpp  Module.hpp
Parse/: Parse.cpp  Parse.hpp
Services/ Hierarchy/: Hierarchy.cpp  Hierarchy.hpp
Services/ChangeLine/: ChangeLine.cpp  ChangeLine.hpp
Services/CmdParse/: CmdParse.cpp  CmdParse.hpp
Services/DrawTree/: DrawTree.cpp  DrawTree.hpp
Services/Hierarchy/: Hierarchy.cpp  Hierarchy.hpp
Services/Module/: Module.cpp  Module.hpp
Services/Parse/: Parse.cpp  Parse.hpp
spdlog/: logger.h  spdlog.h
spdlog/cfg/: helpers.h
spdlog/details/: console_globals.h  file_helper-inl.h  log_msg_buffer.h  os-inl.h  registry-inl.h  registry.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  udp_client-windows.h  udp_client.h
spdlog/fmt/: bin_to_hex.h  fmt.h
spdlog/sinks/: daily_file_sink.h  hourly_file_sink.h  rotating_file_sink-inl.h  stdout_color_sinks-inl.h  tcp_sink.h  udp_sink.h  wincolor_sink-inl.h  wincolor_sink.h
test/: 1.json  2.json  a.json  c.json  change.txt  define.json  f.json  file.list  k.json  led_demo.v  module_decimation.json  temp.json  temp1.json  test.list  test02.v  test03.v  test04.v  test05.v  test06.v
